--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
   <body>
     {% for greeting in greetings %}
         <td>{{greeting}}</td> There <br>
+
     {% endfor %}
+   <script>
+    document.write(5 + 6);
+    </script>
   </body>
 </html>
